fix some misspelling typos

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -814,7 +814,7 @@ information.
 .I ip-address \fR...]\fB;\fR
 .RS 0.25i
 .PP
-This option contains infomration about the rapid deployment option.  It is
+This option contains information about the rapid deployment option.  It is
 8 bits of ipv4 mask length, 8 bits of 6rd prefix length, an ipv6 prefix as
 an ipv6 address and a list of one or more ipv4 addresses.
 .PP
@@ -896,8 +896,8 @@ to the client.  Servers should be listed in order of preference.
 .RS 0.25i
 .PP
 The rdnss-selection option specifies an 8 bit flags field, a primary and secondary
-ip address for the name server and a domainlist of domains for whcih the RDNSS has
-sepcial knowledge.
+ip address for the name server and a domainlist of domains for which the RDNSS has
+special knowledge.
 .PP
 This option is included based on RFC 6731.
 .RE
@@ -1615,7 +1615,7 @@ informationally only.
 .RS 0.25i
 .PP
 The \fBreconf-accept\fR option is included by DHCPv6 clients that
-support the Reconfigure extentions, advertising that they will
+support the Reconfigure extensions, advertising that they will
 respond if the server were to ask them to Reconfigure.  There is
 no support for DHCPv6 Reconfigure extensions, and this option is
 documented informationally only.
