--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -2927,7 +2927,7 @@ physical network interface on which the request arrived.
 .PP
 In order to reduce runtime overhead the server only checks for a server id
 option in the global and subnet scopes.  Complicated configurations
-may result in differnet server ids for this check and when the server id for
+may result in different server ids for this check and when the server id for
 a reply packet is determined, which would prohibit the server from responding.
 .PP
 The primary use for this option is when a client broadcasts a request
