fix a few misspelling typos
due to too many conflicts, I couldn't easily cherry-pick
from adb95d233110b3c6cece7d916cf1445c0c0f098a
so I did this manually again

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1503,7 +1503,7 @@ informationally only.
 .RS 0.25i
 .PP
 The \fBreconf-accept\fR option is included by DHCPv6 clients that
-support the Reconfigure extentions, advertising that they will
+support the Reconfigure extensions, advertising that they will
 respond if the server were to ask them to Reconfigure.  There is
 no support for DHCPv6 Reconfigure extensions, and this option is
 documented informationally only.
