[v4_1_esv] Fix a typo

--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -724,7 +724,7 @@ preference.
 \fIip-address\fR... ]\fB;\fR
 .RS 0.25i
 .PP
-The NNTP server option specifies a list of NNTP servesr available
+The NNTP server option specifies a list of NNTP servers available
 to the client.  Servers should be listed in order of preference.
 .RE
 .PP
