--- a/README
+++ b/README
@@ -38,6 +38,7 @@ the ISC DHCP Distribution.
 	  5.8.3 Other Solaris Items
 	 5.9	 AIX
 	 5.10	 MacOS X
+         5.11    ATF
 	6	SUPPORT
 	 6.1	 HOW TO REPORT BUGS
 	7	HISTORY
@@ -584,6 +585,18 @@ Note the Dynamic Store (from which /var/run/resolv.conf is built) is
 recomputed from scratch when the current location/set is changed.
 Running the dhclient-script reinstalls the resolv.conf.dhclient6
 configuration.
+
+
+			       ATF
+
+Please see the file DHCP/doc/devel/atf.dox for a description of building
+and using these tools.  
+
+The optional unit tests use ATF (Automated Testing Framework) including
+the atf-run and atf-report tools. ATF deprecated these tools in
+version 0.19 and removed these tools from its sources in version 0.20,
+requiring you to get an older version, use Kyua with an ATF compatibility
+package or use the version included in the Bind sources.
 
 			       SUPPORT
 
