--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			      Version 4.3.3b1
-			      04 August 2015
+			     Version 4.3.3
+			   03 September 2015
 
 			      README FILE
 
@@ -142,12 +142,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.3.3b1.tar.gz
-	tar xvf dhcp-4.3.3b1.tar
+	gunzip dhcp-4.3.3.tar.gz
+	tar xvf dhcp-4.3.3.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.3.3b1 subdirectory that you've just created and
+Now, cd to the dhcp-4.3.3 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
