--- a/server/dhcpd.leases.5
+++ b/server/dhcpd.leases.5
@@ -180,6 +180,23 @@ certain event occurs.   The possible events that can occur for an
 active lease are \fBrelease\fR and \fBexpiry\fR.   More than one event
 can be specified - if so, the events are separated by '|' characters.
 .PP
+The \fIauthoring-byte-order\fR statement
+.RS 0.25i
+.PP
+.B authoring-byte-order \fR[ \fIbig-endian\fR | \fIlittle-endian\fR ] \fB;\fR
+.PP
+This statement is automatically added to the top of new lease files by
+the server. It indicates the internal byte order of the server.  This
+permits lease files generated on a server with one form of byte order
+to be read by a server with a different form.  Lease files which do not
+contain this entry are simply treated as having the same byte order as
+the server reading them.  If you are migrating lease files generated
+by a server that predates this statement and is of a different byte
+order than the your destination server, you can manually add this
+statement.  It must proceed any lease entries.  Valid values for this
+parameter are \fIlittle-endian\fR and \fIbig-endian\fR.
+.RE
+.PP
 .SH THE DHCPv4 LEASE DECLARATION
 .PP
 .B lease \fIip-address\fB { \fIstatements...\fB }
