[master] Update client code to RFC7550
Update the v6 client code to handle getting
IA_NAs and IA_PDs in the same request better.

Squashed commit of the following:

commit ad1bf23100eba541c26c6c26fc2c5c9dc57dd674
Author: Shawn Routhier <sar@isc.org>
Date:   Mon Nov 16 23:08:13 2015 -0800

    [rt40190] Use dhc6_check_status for addresses and prefixes

commit 4cb1d499342e68c5c93b7e8dac71c9adbd737846
Author: Shawn Routhier <sar@isc.org>
Date:   Mon Nov 16 22:02:05 2015 -0800

    [rt40190] Correct the tests for a status code in the client

    Some of the tests for the NoAddrs or NoPrefix codes in the
    were incorrect, checking for a return of not success instead
    of success.

commit 41ad9ea4438c0f64b95ec7afeac38afd2f3b36cb
Author: Shawn Routhier <sar@isc.org>
Date:   Fri Nov 13 21:04:55 2015 -0800

    [rt40190] Update site.h to have the correct default

commit cb720dac6670e1a6cc19b22550506ded4093abef
Author: Shawn Routhier <sar@isc.org>
Date:   Fri Nov 13 21:03:38 2015 -0800

    [rt40190] update per second set of review comments

    Mostly this is a set of updates to the documentation.
    The only code change is to add a backwards compatibility
    option in includes/site.h for people who want the old weightings
    for the client lease scoring.

commit 269a5324b950062380b4e3988f56593dc21d05d9
Author: Thomas Markwalder <tmark@isc.org>
Date:   Thu Nov 12 09:00:36 2015 -0500

    [40190] Fixed another typo

commit 7da158497cd9236c30dfdce2b115818d1954839f
Author: Thomas Markwalder <tmark@isc.org>
Date:   Thu Nov 12 07:29:33 2015 -0500

    [40190] Minor cosmetics in dhc6.c

commit a010737de36e5ad2f46bb11f471ac66ccbc856aa
Author: Shawn Routhier <sar@isc.org>
Date:   Sat Nov 7 00:05:20 2015 -0800

    [rt40190] Update the use of the minimum score

    Update the use of the minimum score to use #defines instead
    of 150.  This corrects it for the current values and allows
    us to change the values if we include a backwards compatibility
    option.

commit b07

--- a/client/dhclient.8
+++ b/client/dhclient.8
@@ -55,6 +55,8 @@ dhclient - Dynamic Host Configuration Protocol Client
 .B -P...
 ]
 ]
+.B -R
+]
 [
 .B -i
 ]
@@ -364,7 +366,20 @@ See \fB\-N\fR to restore it.
 .BI \-P
 Enable IPv6 prefix delegation.  This implies \fB\-6\fR and also
 disables the normal address query.  See \fB\-N\fR to restore it.
+Multiple prefixes can be requested with multiple \fB\-P\fR flags.
 Note only one requested interface is allowed.
+.TP
+.BI \-R
+Require that responses include all of the items requested by any
+\fB\-N\fR, \fB\-T\fR, or \fB\-P\fR options.  Normally even if
+the command line includes a number of these the client will be willing
+to accept the best lease it can even if the lease doesn't include all
+of the requested items.  This option causes the client to only
+accept leases that include all of the requested items.
+
+Note well: enabling this may prevent the client from using any
+leases it receives if the servers aren't configured to supply
+all of the items.
 .TP
 .BI \-D \ LL\ or\ LLT
 Override the default when selecting the type of DUID to use.  By default,
@@ -381,6 +396,7 @@ overrides these default, with a value of either \fILL\fR or \fILLT\fR.
 .\" TODO: is this for telling an already running dhclient?
 Restore normal address query for IPv6. This implies \fB-6\fR.
 It is used to restore normal operation after using \fB-T\fR or \fB-P\fR.
+Multiple addresses can be requested with multiple \fB\-N\fR flags.
 .PP
 .I Modifying default file locations:
 The following options can be used to modify the locations a client uses
