--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,6 +1,7 @@
 .\"	$Id: dhclient.conf.5,v 1.22.64.7.6.3 2012/04/16 17:18:22 sar Exp $
 .\"
-.\" Copyright (c) 2009-2012,2014 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2014,2016 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2012 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -266,17 +267,17 @@ options will be ignored.  There is no default require list.
 	interface eth0 {
 		also require domain-search;
 	}
+.fi
 .PP
 .I The
 .B send
 .I statement
 .PP
- \fBsend { [ \fIoption declaration\fR ]
-[\fB,\fI ... \fIoption declaration\fR ]\fB}\fR
+ \fBsend [ \fIoption declaration\fR ] \fB;\fR
 .PP
-The send statement causes the client to send the specified options to
-the server with the specified values.  These are full option
-declarations as described in \fBdhcp-options(5)\fR.  Options that are
+The send statement causes the client to send the specified option to
+the server with the specified value.  This is a full option
+declaration as described in \fBdhcp-options(5)\fR.  Options that are
 always sent in the DHCP protocol should not be specified here, except
 that the client can specify a requested \fBdhcp-lease-time\fR option other
 than the default requested lease time, which is two hours.  The other
