--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,8 +1,6 @@
 .\"	$Id: dhclient.conf.5,v 1.34 2012/01/24 22:23:39 sar Exp $
 .\"
-.\" Copyright (c) 2014,2016 by Internet Systems Consortium, Inc. ("ISC")
-.\" Copyright (c) 2009-2012 by Internet Systems Consortium, Inc. ("ISC")
-.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004-2016 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -599,6 +597,28 @@ day-and-time in UTC, whereas \fIlocal\fR uses a seconds-since-epoch to store
 the time value, and helpfully places a local timezone time in a comment on
 the same line.  The formats are described in detail in this manpage, within
 the LEASE DECLARATIONS section.
+.PP
+The
+.I lease-id-format
+parameter
+.RS 0.25i
+.PP
+.B lease-id-format \fIformat\fB;\fR
+.PP
+The \fIformat\fR parameter must be either \fBoctal\fR or \fBhex\fR.
+This parameter governs the format used to write certain values to lease
+files. With the default format, octal, values are written as quoted strings in
+which non-printable characters are represented as octal escapes -
+a backslash character followed by three octal digits.  When the hex format
+is specified, values are written as an unquoted series of hexadecimal digit
+pairs, separated by colons.
+
+Currently, the values written out based on lease-id-format are the default-duid
+and the IAID value (DHCPv6 only).  The client automatically reads the values
+in either format.  Note that when the format is octal, rather than as an octal
+string, IAID is output as hex if it contains no printable characters or as a
+string if contains only printable characters. This is done to maintain backward
+compatibility.
 .PP
  \fBreject \fIcidr-ip-address\fR [\fB,\fR \fI...\fB \fIcidr-ip-address\fR ] \fB;\fR
 .PP
